# OS_labs

Lab1/doc/: Отчет.odt
Lab1/src/: child.c  parent.c
Lab2/scr/: CMakeLists.txt  hex.c  hex.h  main.c
Lab3/src/: child.c  parent.c
Lab4/src/: CMakeLists.txt  dynamic.c  lib.h  lib1.c  lib2.c  static.c
